<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceff1"
    android:scaleType="centerCrop"
    tools:context="com.coolstardevil.cricket_score_counter.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:background="#EF5350"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/team"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cards"
        android:elevation="4dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/teamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/Enter"
            android:inputType="text"
            android:padding="8dp"
            android:selectAllOnFocus="true"
            android:text="@string/TeamA"
            android:textColor="#EF5350"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/teamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/Enter"
            android:inputType="text"
            android:padding="8dp"
            android:selectAllOnFocus="true"
            android:text="@string/TeamB"
            android:textColor="#EF5350"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAllCaps="true"
        android:textColor="#EF5350"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:text="team A" />


    <TextView
        android:id="@+id/tossWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:textColor="#EF5350"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:text="Team A wins toss!" />

    <LinearLayout
        android:id="@+id/layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn"
                style="@style/main_buttons"
                android:text="@string/Toss" />

            <Button
                android:id="@+id/button"
                style="@style/main_buttons"
                android:text="@string/Start" />

            <Button
                android:id="@+id/result"
                style="@style/main_buttons"
                android:text="@string/Result" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetall"
                style="@style/main_buttons"
                android:text="@string/Reset" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/main_buttons"
                android:text="@string/Save" />

            <Button
                android:id="@+id/btnView"
                style="@style/main_buttons"
                android:text="@string/View" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>